--- a/bibtex/gabriel-c-rau-published.bib
+++ b/bibtex/gabriel-c-rau-published.bib
@@ -68,7 +68,7 @@
 }
 
 @Article{Cuthbert-2014,
-  author   = {Cuthbert, M O and Rau, G C and Andersen, M S and Roshan, H and Rutlidge, H and Marjo, C E and Markowska, M and Jex, C N and Graham, P W and Mariethoz, G and Acworth, R I and Baker, A},
+  author   = {Cuthbert, M O and Rau, Gabriel C and Andersen, M S and Roshan, H and Rutlidge, H and Marjo, C E and Markowska, M and Jex, C N and Graham, P W and Mariethoz, G and Acworth, R I and Baker, A},
   title    = {{Evaporative cooling of speleothem drip water}},
   journal  = {Scientific Reports},
   year     = {2014},
@@ -84,7 +84,7 @@
 }
 
 @Article{Cuthbert-2016,
-  author   = {Cuthbert, M. O. and Acworth, R. I. and Andersen, M. S. and Larsen, J. R. and McCallum, A. M. and Rau, G. C. and Tellam, J. H.},
+  author   = {Cuthbert, M. O. and Acworth, R. I. and Andersen, M. S. and Larsen, J. R. and McCallum, A. M. and Rau, Gabriel C and Tellam, J. H.},
   title    = {{Understanding and quantifying focused, indirect groundwater recharge from ephemeral streams using water table fluctuations}},
   journal  = {Water Resources Research},
   year     = {2016},
@@ -135,7 +135,7 @@
 }
 
 @Article{Kelly-2013,
-  author   = {Kelly, B. F J and Timms, W. A. and Andersen, M. S. and McCallum, A. M. and Blakers, R. S. and Smith, R. and Rau, G. C. and Badenhop, A. and Ludowici, K. and Acworth, R. I.},
+  author   = {Kelly, B. F J and Timms, W. A. and Andersen, M. S. and McCallum, A. M. and Blakers, R. S. and Smith, R. and Rau, Gabriel C and Badenhop, A. and Ludowici, K. and Acworth, R. I.},
   title    = {{Aquifer heterogeneity and response time: the challenge for groundwater management}},
   journal  = {Crop and Pasture Science},
   year     = {2013},
@@ -153,7 +153,7 @@
 }
 
 @Article{McCallum-2012,
-  author    = {McCallum, A. M. and Andersen, M. S. and Rau, G. C. and Acworth, R. I.},
+  author    = {McCallum, A. M. and Andersen, M. S. and Rau, Gabriel C and Acworth, R. I.},
   title     = {{A 1-D analytical method for estimating surface water-groundwater interactions and effective thermal diffusivity using temperature time series}},
   journal   = {Water Resources Research},
   year      = {2012},
@@ -317,7 +317,7 @@
 }
 
 @Article{Turner-2013,
-  author   = {Turner, I.L. and Rau, G.C. and Andersen, M.S. and Austin, M.J. and Puleo, J.A. and Masselink, G.},
+  author   = {Turner, I.L. and Rau, Gabriel CC. and Andersen, M.S. and Austin, M.J. and Puleo, J.A. and Masselink, G.},
   title    = {{Coastal sand barrier hydrology - Observations from the BARDEX II prototype-scale laboratory experiment}},
   journal  = {Journal of Coastal Research},
   year     = {2013},
@@ -336,7 +336,7 @@
 }
 
 @Article{Unland-2013,
-  author   = {Unland, N. P. and Cartwright, I. and Andersen, M. S. and Rau, G. C. and Reed, J. and Gilfedder, B. S. and Atkinson, A. P. and Hofmann, H.},
+  author   = {Unland, N. P. and Cartwright, I. and Andersen, M. S. and Rau, Gabriel C and Reed, J. and Gilfedder, B. S. and Atkinson, A. P. and Hofmann, H.},
   title    = {{Investigating the spatio-temporal variability in groundwater and surface water interactions: A multi-technique approach}},
   journal  = {Hydrology and Earth System Sciences},
   year     = {2013},
@@ -418,7 +418,7 @@
 }
 
 @Article{McDonough-2016,
-  author    = {McDonough, L. K. and Iverach, C. P. and Beckmann, S. and Manefield, M. and Rau, G. C. and Baker, A. and Kelly, B. F J},
+  author    = {McDonough, L. K. and Iverach, C. P. and Beckmann, S. and Manefield, M. and Rau, Gabriel C and Baker, A. and Kelly, B. F J},
   title     = {{Spatial variability of cave-air carbon dioxide and methane concentrations and isotopic compositions in a semi-arid karst environment}},
   journal   = {Environmental Earth Sciences},
   year      = {2016},
@@ -470,7 +470,7 @@
 ﻿
 
 @Conference{Acworth-2012-conf,
-  author    = {Acworth, R.I. and McCallum, A.M. and Rau, G.C. and Andersen, M.S.},
+  author    = {Acworth, R.I. and McCallum, A.M. and Rau, Gabriel CC. and Andersen, M.S.},
   title     = {Tree-water use and groundwater level changes in an unconfined alluvial aquifer at Maules Creek, Narrabri, NSW, Australia},
   year      = {2012},
   note      = {Conference presentation},
@@ -482,7 +482,7 @@
 }
 
 @Conference{Andersen-2013-conf,
-  author    = {Andersen, M S and Cuthbert, M O and Rau, G C and Baker, A and Roshan, H and Rutlidge, H and Marjo, C and Markowska, M and Graham, P W},
+  author    = {Andersen, M S and Cuthbert, M O and Rau, Gabriel C and Baker, A and Roshan, H and Rutlidge, H and Marjo, C and Markowska, M and Graham, P W},
   title     = {Drip-water temperatures in caves: Surface signals or cave processes? Implications for speleothem deposits and paleoclimate archives},
   year      = {2013},
   note      = {Conference presentation},
@@ -530,7 +530,7 @@
 }
 
 @Conference{Andersen-2012-conf,
-  author    = {Andersen, M. S. and McCallum, A. M. and Giambastiani, B. and Rau, G. C. and Kelly, B. F. J. and Acworth, R.I. and Meredith, K. T.},
+  author    = {Andersen, M. S. and McCallum, A. M. and Giambastiani, B. and Rau, Gabriel C and Kelly, B. F. J. and Acworth, R.I. and Meredith, K. T.},
   title     = {Investigations of surface water groundwater interactions in a water stressed semi-arid catchment},
   year      = {2012},
   note      = {Conference presentation},
@@ -542,7 +542,7 @@
 }
 
 @Conference{Andersen-2010-conf,
-  author    = {Andersen, M.S. and Rau, G.C. and McCallum, A.M. and Acworth, R.I.},
+  author    = {Andersen, M.S. and Rau, Gabriel CC. and McCallum, A.M. and Acworth, R.I.},
   title     = {On the Temporal Variability of Streambed Hydraulic Conductivity},
   year      = {2010},
   note      = {Conference presentation},
@@ -554,7 +554,7 @@
 }
 
 @Conference{Andersen-2011-conf,
-  author    = {Andersen, M. S. and Rau, G.C. and McCallum, A. M. and Acworth, R. I.},
+  author    = {Andersen, M. S. and Rau, Gabriel CC. and McCallum, A. M. and Acworth, R. I.},
   title     = {Redox processes and arsenic release in the streambed of a semi-arid losing stream},
   year      = {2011},
   note      = {Conference presentation},
@@ -566,7 +566,7 @@
 }
 
 @Conference{Andersen-2011-confa,
-  author    = {Andersen, M. S. and Rau, G.C. and McCallum, A. M. and Meredith, K. and Acworth, R. I.},
+  author    = {Andersen, M. S. and Rau, Gabriel CC. and McCallum, A. M. and Meredith, K. and Acworth, R. I.},
   title     = {Constraining water fluxes through the streambed of a semi-arid losing stream using natural tracers: heat and radioisotopes},
   year      = {2011},
   note      = {Conference presentation},
@@ -579,7 +579,7 @@
 }
 
 @Conference{Andersen-2011-confb,
-  author    = {Andersen, M.S. and Rau, G.C. and McCallum, A.M. and Meredith, K. and Acworth, R.I.},
+  author    = {Andersen, M.S. and Rau, Gabriel CC. and McCallum, A.M. and Meredith, K. and Acworth, R.I.},
   title     = {Groundwater recharge and geochemical processes in a semi-arid losing stream using temperature, isotopes and geochemistry},
   year      = {2011},
   note      = {Conference presentation},
@@ -591,7 +591,7 @@
 }
 
 @Conference{Baker-2014-conf,
-  author    = {Baker, A. and Acworth, R. I. and Andersen, M. and Cuthbert, M. and Graham, P. and Jex, C. and Mariethoz, G. and Marjo, C. and Markowska, M. and Rau, G. and Roshan, H. and Rutlidge, H. and Treble, P.},
+  author    = {Baker, A. and Acworth, R. I. and Andersen, M. and Cuthbert, M. and Graham, P. and Jex, C. and Mariethoz, G. and Marjo, C. and Markowska, M. and Rau, Gabriel C and Roshan, H. and Rutlidge, H. and Treble, P.},
   title     = {Water Oxygen Isotope Systematics from Source to Stalagmites},
   year      = {2014},
   note      = {Conference presentation},
@@ -604,7 +604,7 @@
 }
 
 @Conference{Cuthbert-2014-conf,
-  author    = {Cuthbert, M O and I, Acworth. R and Andersen, M S and Larsen, J R and McCallum, A M and Rau, G C and Tellam, J H},
+  author    = {Cuthbert, M O and I, Acworth. R and Andersen, M S and Larsen, J R and McCallum, A M and Rau, Gabriel C and Tellam, J H},
   title     = {Understanding three-dimensional stream-aquifer interactions in an ephemeral stream catchment and implications for groundwater recharge estimation},
   year      = {2014},
   note      = {Conference presentation},
@@ -617,7 +617,7 @@
 }
 
 @Conference{Halloran-2013-conf,
-  author    = {Halloran, L. J. S. and Roshan, H. and Rau, G. C. and McCallum, A. M. and Andersen, M. S. and Acworth, R. I.},
+  author    = {Halloran, L. J. S. and Roshan, H. and Rau, Gabriel C and McCallum, A. M. and Andersen, M. S. and Acworth, R. I.},
   title     = {Effects of floods and groundwater pumping on hyporheic flows measured by coiled fibre-optic distributed temperature sensing},
   year      = {2013},
   note      = {Conference presentation},
@@ -629,7 +629,7 @@
 }
 
 @Conference{Li-2015-conf,
-  author    = {Li, C P and Andersen, M S and Kelly, B F J and Rau, G C and McCallum, A M},
+  author    = {Li, C P and Andersen, M S and Kelly, B F J and Rau, Gabriel C and McCallum, A M},
   title     = {The decline and rise of groundwater levels in the Maules Creek Catchment (Upper Namoi): Implications for groundwater resource management},
   year      = {2015},
   note      = {Conference presentation},
@@ -653,7 +653,7 @@
 }
 
 @Conference{Markowska-2014-conf,
-  author    = {Markowska, M. and Baker, A. and Andersen, M. S. and Cuthbert, M. O. and Rau, G. C. and Jex, C. and Rutlidge, H. and Marjo, C. and Roshan, H. and Treble, P.},
+  author    = {Markowska, M. and Baker, A. and Andersen, M. S. and Cuthbert, M. O. and Rau, Gabriel C and Jex, C. and Rutlidge, H. and Marjo, C. and Roshan, H. and Treble, P.},
   title     = {Where is the water going: An irrigation experiment using a natural isotopic tracer in karst SE, Australia},
   year      = {2014},
   note      = {Conference presentation},
@@ -677,7 +677,7 @@
 }
 
 @Conference{McCallum-2010-conf,
-  author    = {McCallum, A.M. and Andersen, M.S. and Rau, G.C. and Acworth, R.I.},
+  author    = {McCallum, A.M. and Andersen, M.S. and Rau, Gabriel CC. and Acworth, R.I.},
   title     = {Investigation of surface water groundwater interactions and temporal variability of streambed hydraulic conductivity using streambed temperature data},
   year      = {2010},
   note      = {Conference presentation},
@@ -689,7 +689,7 @@
 }
 
 @Conference{McCallum-2011-conf,
-  author    = {McCallum, A. M. and Andersen, M. S. and Rau, G.C. and Acworth, R. I.},
+  author    = {McCallum, A. M. and Andersen, M. S. and Rau, Gabriel CC. and Acworth, R. I.},
   title     = {Using Combined Temperature, Flow and Level Data to Investigate River-Aquifer Interaction Scaling Issue},
   year      = {2011},
   note      = {Conference presentation},
@@ -701,7 +701,7 @@
 }
 
 @Conference{McCallum-2013-conf,
-  author    = {McCallum, A. M. and Cuthbert, M. O. and Roshan, H. and Rau, G.C. and Andersen, M. S. and Acworth, R.I.},
+  author    = {McCallum, A. M. and Cuthbert, M. O. and Roshan, H. and Rau, Gabriel CC. and Andersen, M. S. and Acworth, R.I.},
   title     = {Estimating surface water groundwater interactions using temperature time series for non-uniform and transient conditions},
   year      = {2013},
   note      = {Conference presentation},
@@ -713,7 +713,7 @@
 }
 
 @Conference{Rau-2009-conf,
-  author    = {Rau, G. C. and Andersen, M. S. and Acworth, R. I.},
+  author    = {Rau, Gabriel C and Andersen, M. S. and Acworth, R. I.},
   title     = {Investigating Testing Methods Using Natural Heat as a Tracer to Quantify Surface Water Groundwater Connectivity: Maules Creek, NSW},
   year      = {2009},
   note      = {Conference presentation},
@@ -725,7 +725,7 @@
 }
 
 @Conference{Rau-2011-conf,
-  author    = {Rau, G.C. and Andersen, M. S. and Acworth, R. I.},
+  author    = {Rau, Gabriel CC. and Andersen, M. S. and Acworth, R. I.},
   title     = {Is thermal dispersivity significant for the use of heat as a tracer in sediments?},
   year      = {2011},
   note      = {Conference presentation},
@@ -738,7 +738,7 @@
 }
 
 @Conference{Rau-2012-conf,
-  author    = {Rau, G.C. and Andersen, M. S. and Acworth, R. I.},
+  author    = {Rau, Gabriel CC. and Andersen, M. S. and Acworth, R. I.},
   title     = {The effect of non-uniform flow in homogeneous sediment on velocity quantification using heat as a tracer},
   year      = {2012},
   note      = {Conference presentation},
@@ -751,7 +751,7 @@
 }
 
 @Conference{Rau-2009-confa,
-  author    = {Rau, G. C. and Andersen, M. S. and McCallum, A. M. and Acworth, R. I.},
+  author    = {Rau, Gabriel C and Andersen, M. S. and McCallum, A. M. and Acworth, R. I.},
   title     = {Field investigation using natural heat as a tracer to quantify surface water groundwater connectivity in Maules Creek, NSW, Australia},
   year      = {2009},
   note      = {Conference presentation},
@@ -764,7 +764,7 @@
 }
 
 @Conference{Rau-2010-conf,
-  author    = {Rau, G.C. and Andersen, M.S. and McCallum, A.M. and Acworth, R.I.},
+  author    = {Rau, Gabriel CC. and Andersen, M.S. and McCallum, A.M. and Acworth, R.I.},
   title     = {Uncertainty of vertical streambed seepage rates under realistic field conditions using diel temperature fluctuations},
   year      = {2010},
   note      = {Conference presentation},
@@ -776,7 +776,7 @@
 }
 
 @Conference{Rau-2013-conf,
-  author    = {Rau, G.C. and Andersen, M.S. McCallum, A.M. and Roshan, H. and Cuthbert, M. and Acworth, R.I.},
+  author    = {Rau, Gabriel CC. and Andersen, M.S. McCallum, A.M. and Roshan, H. and Cuthbert, M. and Acworth, R.I.},
   title     = {Heat as a Tracer of Groundwater Flow: Recent Advances and Future Challenges},
   year      = {2013},
   note      = {Conference presentation},
@@ -801,7 +801,7 @@
 }
 
 @Conference{Rau-2014-conf,
-  author    = {Rau, G. C. and Frecker, J. and Andersen, M. S. and Unland, N. and Hofmann, H. and Gilfedder, B. S. and Atkinson, A. and Cuthbert, M. and McCallum, A. and Roshan, H. and Cartwright, I. and Hollins, S. and Acworth, R. I.},
+  author    = {Rau, Gabriel C and Frecker, J. and Andersen, M. S. and Unland, N. and Hofmann, H. and Gilfedder, B. S. and Atkinson, A. and Cuthbert, M. and McCallum, A. and Roshan, H. and Cartwright, I. and Hollins, S. and Acworth, R. I.},
   title     = {Combining Radon and heat as tracers to characterise surface water and groundwater exchange pathways},
   year      = {2014},
   note      = {Conference presentation},
@@ -837,7 +837,7 @@
 }
 
 @Conference{Rutlidge-2014-confa,
-  author    = {Rutlidge, H T and Andersen, M S and Graham, P W and Cuthbert, M O and Rau, GC and Roshan, H and Markowska, M and Marjo, C and Baker, A},
+  author    = {Rutlidge, H T and Andersen, M S and Graham, P W and Cuthbert, M O and Rau, Gabriel C and Roshan, H and Markowska, M and Marjo, C and Baker, A},
   title     = {Artificial infiltrations informing interpretation of trace element records in speleothems},
   year      = {2014},
   note      = {Conference presentation},
@@ -850,7 +850,7 @@
 ﻿
 
 @Misc{Andersen-2010,
-  author    = {Andersen, M. S. and Acworth, R. I. and Rau, G. C. and McCallum, A. M.},
+  author    = {Andersen, M. S. and Acworth, R. I. and Rau, Gabriel C and McCallum, A. M.},
   title     = {Investigations of surface water ground-water interactions in a water stressed semi-arid catchment},
   year      = {2010},
   note      = {Workshop},
@@ -862,7 +862,7 @@
 }
 
 @Misc{Rau-2009,
-  author    = {Rau, G. C. and Andersen, M. S. and McCallum, A.M. and Acworth, R. I.},
+  author    = {Rau, Gabriel C and Andersen, M. S. and McCallum, A.M. and Acworth, R. I.},
   title     = {Field Investigation Testing Methods Using Natural Heat as a Tracer to Quantify Surface Water Groundwater Connectivity: Maules Creek, NSW},
   year      = {2009},
   note      = {Workshop},
@@ -875,7 +875,7 @@
 ﻿
 
 @Misc{Rau-2015b,
-  author    = {Rau, GC and Baker, A and Cuthbert, MO and Andersen, MS},
+  author    = {Rau, Gabriel C and Baker, A and Cuthbert, MO and Andersen, MS},
   title     = {Delving deep into caves can teach us about climate past and present},
   year      = {2015},
   note      = {News item},
@@ -885,7 +885,7 @@
 }
 
 @Misc{Rau-2015c,
-  author    = {Rau, GC and Kelly, B and Timms, W and Acworth, RI},
+  author    = {Rau, Gabriel C and Kelly, B and Timms, W and Acworth, RI},
   title     = {ew research identifies a gap in sediments and questions simple groundwater models on the Liverpool Plains, NSW, Australia},
   year      = {2015},
   note      = {News item},
@@ -896,7 +896,7 @@
 ﻿
 
 @Misc{Andersen-2010a,
-  author = {Andersen, M.S. and Rau, G.C. and McCallum, A.M. and Acworth, R.I.},
+  author = {Andersen, M.S. and Rau, Gabriel CC. and McCallum, A.M. and Acworth, R.I.},
   title  = {Investigations of surface water groundwater interactions in a water stressed semi-arid catchment},
   month  = {24 Sept 2010},
   year   = {2010},
@@ -906,7 +906,7 @@
 }
 
 @Misc{Rau-2010a,
-  author = {Rau, G.C. and Andersen, M.S.},
+  author = {Rau, Gabriel CC. and Andersen, M.S.},
   title  = {Analytical methods that use natural heat as a tracer to quantify surface water–groundwater exchange, evaluated using field temperature records},
   month  = {15 Jul 2010},
   year   = {2010},
@@ -916,7 +916,7 @@
 }
 
 @Misc{Rau-2010b,
-  author = {Rau, G.C. and Andersen, M.S.},
+  author = {Rau, Gabriel CC. and Andersen, M.S.},
   title  = {Analytical methods that use natural heat as a tracer to quantify surface water–groundwater exchange, evaluated using field temperature records},
   month  = {19 Jul 2010},
   year   = {2010},
@@ -926,7 +926,7 @@
 }
 
 @Misc{Rau-2010c,
-  author = {Rau, G.C. and Andersen, M.S.},
+  author = {Rau, Gabriel CC. and Andersen, M.S.},
   title  = {Analytical methods that use natural heat as a tracer to quantify surface water–groundwater exchange, evaluated using field temperature records},
   month  = {21 Jul 2010},
   year   = {2010},
@@ -936,7 +936,7 @@
 }
 
 @Misc{Rau-2010d,
-  author = {Rau, G.C. and Andersen, M.S.},
+  author = {Rau, Gabriel CC. and Andersen, M.S.},
   title  = {Analytical methods that use natural heat as a tracer to quantify surface water–groundwater exchange, evaluated using field temperature records},
   month  = {23 Jul 2010},
   year   = {2010},
@@ -946,7 +946,7 @@
 }
 
 @Misc{Rau-2009a,
-  author = {Rau, G.C. and Andersen, M.S and Acworth, R.I.},
+  author = {Rau, Gabriel CC. and Andersen, M.S and Acworth, R.I.},
   title  = {The Use of Natural Heat as a Tracer to Quantify Groundwater Surface Water Interactions, Maules Creek, New South Wales, Australia},
   month  = {20 Nov 2009},
   year   = {2009},
@@ -956,7 +956,7 @@
 }
 
 @Misc{Rau-2010e,
-  author = {Rau, G.C. and Andersen, M.S. and Acworth, R.I.},
+  author = {Rau, Gabriel CC. and Andersen, M.S. and Acworth, R.I.},
   title  = {Analytical methods that use natural heat as a tracer to quantify surface water–groundwater exchange, evaluated using field temperature records},
   month  = {9 Feb 2010},
   year   = {2010},
@@ -966,7 +966,7 @@
 }
 
 @Misc{Rau-2010f,
-  author = {Rau, G.C. and Andersen, M.S. and Acworth, R.I.},
+  author = {Rau, Gabriel CC. and Andersen, M.S. and Acworth, R.I.},
   title  = {Laboratory and field investigation of heat transport in shallow saturated hydrogeological systems},
   month  = {21 Sept 2010},
   year   = {2010},
@@ -976,7 +976,7 @@
 }
 
 @Misc{Rau-2011,
-  author = {Rau, G.C. and Andersen, M.S and Acworth, R.I.},
+  author = {Rau, Gabriel CC. and Andersen, M.S and Acworth, R.I.},
   title  = {Using natural heat as a tracer to quantify vertical streambed water flow},
   month  = {19 July 2011},
   year   = {2011},
@@ -986,7 +986,7 @@
 }
 
 @Misc{Rau-2012b,
-  author = {Rau, G.C. and Andersen, M.S and Acworth, R.I.},
+  author = {Rau, Gabriel CC. and Andersen, M.S and Acworth, R.I.},
   title  = {Experimental Investigation of Heat Transport Characteristics in Heterogeneous or Natural Materials},
   month  = {Feb 2012},
   year   = {2012},
@@ -997,7 +997,7 @@
 ﻿
 
 @Mastersthesis{Rau-2008-thesis,
-  author     = {Rau, G. C.},
+  author     = {Rau, Gabriel C},
   title      = {The Use of Natural Heat as a Tracer to Quantify Groundwater Surface Water Interactions: Maules Creek, New South Wales, Australia},
   school     = {Department of Hydromechanics and Modelling of Hydrosystems},
   year       = {2008},
@@ -1008,7 +1008,7 @@
 }
 
 @Phdthesis{Rau-2012-thesis,
-  author     = {Rau, G. C.},
+  author     = {Rau, Gabriel C},
   title      = {Experimental Analysis of Heat as a Tracer for the Quantiﬁcation of Thermal Dispersion and Water Flow in Sand},
   school     = {School of Civil and Environmental Engineering},
   year       = {2012},
@@ -1020,7 +1020,7 @@
 ﻿
 
 @Conference{Baker-2015-conf,
-  author    = {Baker, A and Treble, P. and Coleborn, Katie and Mahmud, K and Markowska, M and Flemons, I and Cuthbert, M O and Rau, GC and Andersen, MS},
+  author    = {Baker, A and Treble, P. and Coleborn, Katie and Mahmud, K and Markowska, M and Flemons, I and Cuthbert, M O and Rau, Gabriel C and Andersen, MS},
   title     = {Hundreds of automatic drip counters reveal infiltration water discharge characteristics in Australian caves},
   year      = {2015},
   note      = {Conference poster},
@@ -1032,7 +1032,7 @@
 }
 
 @Conference{Halloran-2015-conf,
-  author    = {Halloran, L. J. S. and Rau, G. C. and Andersen, M. S. and Roshan, H. and Acworth, I.},
+  author    = {Halloran, L. J. S. and Rau, Gabriel C and Andersen, M. S. and Roshan, H. and Acworth, I.},
   title     = {Natural temperature variations and soil moisture content in the vadose zone},
   year      = {2015},
   note      = {Conference poster},
@@ -1045,7 +1045,7 @@
 }
 
 @Conference{Halloran-2015-confa,
-  author    = {Halloran, L. J. S. and Roshan, H. and Rau, G. C. and Cuthbert, M. O. and Andersen, M. S. and Acworth, I.},
+  author    = {Halloran, L. J. S. and Roshan, H. and Rau, Gabriel C and Cuthbert, M. O. and Andersen, M. S. and Acworth, I.},
   title     = {Soil moisture content estimation from passive temperature measurements},
   year      = {2015},
   note      = {Conference poster},
@@ -1070,7 +1070,7 @@
 }
 
 @Conference{Rau-2008-conf,
-  author    = {Rau, G. C. and Andersen, M.S. and McCallum, A.M. and Acworth, R.I},
+  author    = {Rau, Gabriel C and Andersen, M.S. and McCallum, A.M. and Acworth, R.I},
   title     = {Field and Numerical Investigation of Surface Water Groundwater Interactions Using Natural Heat as a Tracer – Deviation from the 1D Flow Assumption},
   year      = {2008},
   note      = {Conference poster},
@@ -1082,7 +1082,7 @@
 }
 
 @Conference{Rau-2015-conf,
-  author    = {Rau, G. C. and Rutlidge, H. and Andersen, M. S. and Unland, N. P. and Hofmann, H. and Gilfedder, B. S. and Atkinson, A. and Cartwright, I. and Baker, A. and Acworth, R. I.},
+  author    = {Rau, Gabriel C and Rutlidge, H. and Andersen, M. S. and Unland, N. P. and Hofmann, H. and Gilfedder, B. S. and Atkinson, A. and Cartwright, I. and Baker, A. and Acworth, R. I.},
   title     = {222-Rn and hydrochemical parameters reveal natural and induced surface groundwater exchange pathways},
   year      = {2015},
   note      = {Conference poster},
@@ -1095,7 +1095,7 @@
 }
 
 @Conference{Roshan-2013-conf,
-  author    = {Roshan, H. and Young, Michael and Andersen, M. S. and Halloran, L. and McCallum, A.M. and Rau, G.C. and Acworth, R.I.},
+  author    = {Roshan, H. and Young, Michael and Andersen, M. S. and Halloran, L. and McCallum, A.M. and Rau, Gabriel CC. and Acworth, R.I.},
   title     = {Evaluating thermal response of Fiber Optic Distributed Temperature Sensing},
   year      = {2013},
   note      = {Conference poster},
@@ -1107,7 +1107,7 @@
 }
 
 @Conference{Rutlidge-2014-conf,
-  author    = {Rutlidge, H T and Andersen, M S and Rau, G C and Cuthbert, M O and Graham, P W and Unland, N P and Hofmann, H and Gilfidder, B S and Atkinson, A and Cartwright, I and Halloran, L J S and Baker, A},
+  author    = {Rutlidge, H T and Andersen, M S and Rau, Gabriel C and Cuthbert, M O and Graham, P W and Unland, N P and Hofmann, H and Gilfidder, B S and Atkinson, A and Cartwright, I and Halloran, L J S and Baker, A},
   title     = {Use of fluorescence in conjunction with radon activity to monitor groundwater-surface water interactions in a system under stress},
   year      = {2014},
   note      = {Conference poster},
@@ -1120,7 +1120,7 @@
 ﻿
 
 @Conference{Halloran-,
-  author        = {Halloran, LJ and Rau, GC and Kennedy, JP and Li, CP and Roshan, H and Andersen, MS},
+  author        = {Halloran, LJ and Rau, Gabriel C and Kennedy, JP and Li, CP and Roshan, H and Andersen, MS},
   title         = {Applied thermal methods in unsaturated zone hydrology},
   year          = {2016},
   organization  = {Sydney, NSW},
@@ -1133,7 +1133,7 @@
 }
 
 @Conference{Andersen-2016,
-  author        = {Andersen, MS and Eberhard, SM and Rutlidge, H and Rau, G and Auhl, A and Moll, C},
+  author        = {Andersen, MS and Eberhard, SM and Rutlidge, H and Rau, Gabriel C and Auhl, A and Moll, C},
   title         = {Biogeochemical processes in the hyporheic zone: the role of flow regime in controlling habitat.},
   year          = {2016},
   month         = {Nov},
@@ -1149,7 +1149,7 @@
 }
 
 @Conference{Andersen-2016a,
-  author        = {Andersen, MS and Rutlidge, H and Eberhard and Auhl and Rau},
+  author        = {Andersen, MS and Rutlidge, H and Eberhard and Auhl and Rau, Gabriel C},
   title         = {Coupling of flow and biogeochemical processes controlling the environmental conditions in the hyporheic zone: Implications for the streambed habitat},
   year          = {2016},
   organization  = {San Francisco, USA},
